Route for movie details added

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
 upcoming_movies:
     path: /movies/upcoming
     controller: App\Controller\MoviesController::upcomingMovies
+
+movie_details:
+    path: /movies/{movieId}
+    controller: App\Controller\MoviesController::movieDetails
