--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    api_key: '1f54bd990f1cdfb230adb312546d765d'
+    api_url: 'https://api.themoviedb.org/3'
 
 services:
     # default configuration for services in *this* file
