--- a/config/services.yaml
+++ b/config/services.yaml
@@ -27,8 +27,9 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
-    GuzzleHttp\ClientInterface:
-        class: GuzzleHttp\Client
+
+    GuzzleHttp\Client: ~
+    GuzzleHttp\ClientInterface: '@GuzzleHttp\Client'
 
     App\EventListener\ExceptionListener:
         tags:
