Route for search by query changed so it can use query string

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -9,5 +9,5 @@ movie_details:
         movieId: '\d+'
 
 movie_by_query:
-    path: /movies/query/{query}
+    path: /movies/query
     controller: App\Controller\MoviesController::byQuery
