--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@
 ###> phpstorm ###
 .idea/
 ###< phpstorm ###
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
