Caching configuration set for Filesystem cache

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -31,6 +31,9 @@ services:
     GuzzleHttp\Client: ~
     GuzzleHttp\ClientInterface: '@GuzzleHttp\Client'
 
+    Symfony\Component\Cache\Adapter\FilesystemAdapter: ~
+    Psr\Cache\CacheItemPoolInterface: '@Symfony\Component\Cache\Adapter\FilesystemAdapter'
+
     App\EventListener\ExceptionListener:
         tags:
             - { name: kernel.event_listener, event: kernel.exception }
