API_KEY and CLIENT_URL saved in env variables. .env file removed from VCS. CORS configuration changed

--- a/.env
+++ b/.env
@@ -19,3 +19,5 @@ APP_SECRET=9c42c1c55c6a57a47bf1b9bb135f6665
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
+API_KEY=
+CLIENT_URL=
