--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    api_key: '%env(API_KEY)'
+    api_key: '%env(API_KEY)%'
     api_url: 'https://api.themoviedb.org/3'
     client_url: '%env(CLIENT_URL)%'
 
@@ -31,10 +31,6 @@ services:
 
     GuzzleHttp\Client: ~
     GuzzleHttp\ClientInterface: '@GuzzleHttp\Client'
-
-    Psr\Cache\CacheItemPoolInterface:
-        factory: 'Symfony\Component\Cache\Adapter\RedisAdapter:createConnection'
-        arguments: ['%env(REDIS_URL)%']
 
     App\EventListener\ExceptionListener:
         tags:
