--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,12 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "phpstan": "phpstan analyse -l 5 src tests",
+        "check": [
+            "phpcs",
+            "@phpstan",
+            "phpunit"
         ]
     },
     "conflict": {
@@ -60,6 +66,8 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.1"
+        "phpstan/phpstan": "^0.11.7",
+        "phpunit/phpunit": "^8.1",
+        "squizlabs/php_codesniffer": "^3.4"
     }
 }
